
MASTER

* 

* Changing test to allow ENV['ARUNIT_DB_NAME'] as the database name for the test units. 
  Matches up with AR conventions. [Ransom Briggs]


2.3.3
  
* Revert #ad83df82 and again cache column information at the connection's instance. The 
  previous commit was causing all sorts of view and schema reflection problems. [Ken Collins]


2.3.2

* Insert queries that include the word "insert" as a partial column name with the word 
  "id" as a value were falsely being matched as identity inserts. [Sean Caffery/bfabry]

* Delegate all low level #raw_connection calls to #raw_connection_run and #raw_connection_do
  which abstract out the low level modes in the connection options at that point. [Ken Collins]

* Remove DBI dependency and go straight ODBC for speed improvement [Erik Bryn]

* Leave order by alone when same column crosses two tables [Ransom Briggs]


* 2.3 * (December 1st, 2009)

* Table and column aliases can handle many. Resolves ticket #19 [stonegao]

* Coerce a few tests that were failing in 2.3.x [Ken Collins]

* Change column/view cache to happen at class level. Allows connection pool to share same
  caches as well as the ability to expire the caches when needed. Also fix change_column so 
  that exceptions are not raised when the column contains an existing default. [Ken Collins]

* Allow query_requires_identity_insert? method to return quoted table name in situations where the 
  INSERT parts are not quoted themselves. [Gary/iawgens, Richard Penwell, Ken Collins]

* Fixed namespace in calling test_sqlserver_odbc within test_unicode_types. [Gary/iawgens]

* Columns with multi-line defaults work correctly. [bfabry]


* 2.2.22 * (October 15th, 2009)

* Support Identity-key-column judgement on multiple schema environment [Ken Tachiya]

* Add support for tinyint data types. In MySQL all these types would be boolean, however in 
  our adapter, they will use the full 1 => 255 Fixnum value as you would expect. [Ken Collins]

